syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";
import "NullableGrpcDecimal.proto";

message IncomeBaseData {
    cis.types.NullableGrpcDecimal Sum = 1;
    string CurrencyCode = 2;
}

message EmployerData {
    string Name = 1;
    string BirthNumber = 2;
    string Cin = 3;
    google.protobuf.Int32Value CountryId = 4;
}

message JobData {
    cis.types.NullableGrpcDecimal GrossAnnualIncome = 1;
    string JobDescription = 2;
    bool IsInProbationaryPeriod = 3;
    bool IsInTrialPeriod = 4;
    google.protobuf.Int32Value EmploymentTypeId = 5;
    cis.types.NullableGrpcDate CurrentWorkContractSince = 6;
    cis.types.NullableGrpcDate CurrentWorkContractTo = 7;
    cis.types.NullableGrpcDate FirstWorkContractSince = 8;
}

message WageDeductionData {
     cis.types.NullableGrpcDecimal DeductionDecision = 1;
     cis.types.NullableGrpcDecimal DeductionPayments = 2;
     cis.types.NullableGrpcDecimal DeductionOther = 3;
}

message IncomeConfirmationData {
    bool IsIssuedByExternalAccountant = 1;
    cis.types.NullableGrpcDate ConfirmationDate = 2;
    string ConfirmationPerson = 3;
    string ConfirmationContact = 4;
}

message IncomeDataEmployement {
    google.protobuf.Int32Value ForeignIncomeTypeId = 2;
    bool HasProofOfIncome = 3;
    DomainServices.HouseholdService.EmployerData Employer = 4;
    DomainServices.HouseholdService.JobData Job = 5;
    bool HasWageDeduction = 6;
    DomainServices.HouseholdService.WageDeductionData WageDeduction = 7;
    DomainServices.HouseholdService.IncomeConfirmationData IncomeConfirmation = 8;
}

message IncomeDataOther {
    google.protobuf.Int32Value IncomeOtherTypeId = 1;
}

message IncomeDataEntrepreneur {
    string Cin = 1;
    string BirthNumber = 2;
    google.protobuf.Int32Value CountryOfResidenceId = 3;
}

message IncomeDataRent {
}